修改编译版本

--- a/bintray.gradle
+++ b/bintray.gradle
@@ -2,37 +2,37 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 version = android.defaultConfig.versionName
-group = GROUP
+//group = GROUP
 
-install{
-    repositories.mavenInstaller{
-        pom{
-            project{
-                packaging PACKAGING
-                name DESCRIBE
-                url SITE_URL
-                licenses{
-                    license{
-                        name LICENSE_NAME
-                        url LICENSE_URL
-                    }
-                }
-                developers{
-                    developer{
-                        id DEVELOPER_ID
-                        name DEVELOPER_NAME
-                        email DEVELOPER_EMAIL
-                    }
-                }
-                scm{
-                    connection GIT_URL
-                    developerConnection GIT_URL
-                    url SITE_URL
-                }
-            }
-        }
-    }
-}
+//install{
+//    repositories.mavenInstaller{
+//        pom{
+//            project{
+//                packaging PACKAGING
+//                name DESCRIBE
+//                url SITE_URL
+//                licenses{
+//                    license{
+//                        name LICENSE_NAME
+//                        url LICENSE_URL
+//                    }
+//                }
+//                developers{
+//                    developer{
+//                        id DEVELOPER_ID
+//                        name DEVELOPER_NAME
+//                        email DEVELOPER_EMAIL
+//                    }
+//                }
+//                scm{
+//                    connection GIT_URL
+//                    developerConnection GIT_URL
+//                    url SITE_URL
+//                }
+//            }
+//        }
+//    }
+//}
 
 task sourcesJar(type: Jar){
     from android.sourceSets.main.java.srcDirs
@@ -67,16 +67,16 @@ artifacts{
 
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
-bintray{
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-    configurations = ['archives']
-    pkg{
-        repo = PROJECT_REPO
-        name = PROJECT_NAME
-        websiteUrl = SITE_URL
-        vcsUrl = GIT_URL
-        licenses = ["Apache-2.0"]
-        publish = PROJECT_PUBLISH
-    }
-}
+//bintray{
+//    user = properties.getProperty("bintray.user")
+//    key = properties.getProperty("bintray.apikey")
+//    configurations = ['archives']
+//    pkg{
+//        repo = PROJECT_REPO
+//        name = PROJECT_NAME
+//        websiteUrl = SITE_URL
+//        vcsUrl = GIT_URL
+//        licenses = ["Apache-2.0"]
+//        publish = PROJECT_PUBLISH
+//    }
+//}
