--- a/viseutils/build.gradle
+++ b/viseutils/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 28
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 22
@@ -18,7 +17,8 @@ android {
 }
 
 dependencies {
-    compile 'com.vise.xiaoyaoyou:viselog:1.0.0'
+//    api 'com.vise.xiaoyaoyou:viselog:1.0.0'
+    api 'com.vise.xiaoyaoyou:viselog:1.1.0'
 }
 
 apply from: '../bintray.gradle'
